Fusion-Qa-Final/src/objects/Quote_Line_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Amount__c</fullName>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calc_Type__c</fullName>
        <label>Calculation Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cond_Type__c</fullName>
        <label>Condition Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cond_Value__c</fullName>
        <label>Condition Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Header</label>
        <referenceTo>Quote_Header__c</referenceTo>
        <relationshipLabel>Quote Line Pricings</relationshipLabel>
        <relationshipName>Quote_Line_Pricings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Item_Number__c</fullName>
        <label>Quote Item Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Item_level_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Item</label>
        <referenceTo>Quote_Item_Level__c</referenceTo>
        <relationshipLabel>Quote Line Pricings</relationshipLabel>
        <relationshipName>Quote_Line_Pricings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Text__c</fullName>
        <label>Short Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Simulate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Simulate Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Quote Line Pricing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quote Line Pricing  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Line Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>